--- a/catalog.html
+++ b/catalog.html
@@ -4,27 +4,34 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
 
-  <header>
-    <nav>
-      <a href="index.html">
-        <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+  <header class="main-header">
+    <nav class="main-nav">
+      <a class="main-header-logo" href="index.html">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
-      <ul>
-        <li><a href="blank.html">Студия</a></li>
-        <li><a href="blank.html">Клиенты</a></li>
-        <li><a>Магазин</a></li>
-        <li><a href="blank.html">Контакты</a></li>
+      <ul class="site-nav">
+        <li class="nav-item"><a href="blank.html">Студия</a></li>
+        <li class="nav-item"><a href="blank.html">Клиенты</a></li>
+        <li class="nav-item"><a>Магазин</a></li>
+        <li class="nav-item"><a href="blank.html">Контакты</a></li>
       </ul>
-      <a href="blank.html">Корзина</a>
+      <a class="cart-link" href="blank.html">Корзина</a>
     </nav>
   </header>
-  <main>
+
+  <main class="page-main">
     <h1>Магазин готовых шаблонов</h1>
-    <section>
+    <section class="main-filter">
       <h2>Фильтр товаров</h2>
       <form action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
@@ -35,16 +42,16 @@
         </fieldset>
         <fieldset>
           <legend>Сетка:</legend>
-          <ul>
-            <li>
+          <ul class="layout-list">
+            <li class="layout-item">
               <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
               <label for="filter-adaptive">Адаптивная</label>
             </li>
-            <li>
+            <li class="layout-item">
               <input type="radio" name="layout" value="fix" id="filter-fix">
               <label for="filter-fix">Фиксированная</label>
             </li>
-            <li>
+            <li class="layout-item">
               <input type="radio" name="layout" value="rubber" id="filter-rubber">
               <label for="filter-rubber">Резиновая</label>
             </li>
@@ -52,24 +59,24 @@
         </fieldset>
         <fieldset>
           <legend>Особенности:</legend>
-          <ul>
-            <li>
+          <ul class="properties-list">
+            <li class="property-item">
               <input type="checkbox" checked name="slider" id="filter-slider">
               <label for="filter-slider">Слайдер</label>
             </li>
-            <li>
+            <li class="property-item">
               <input type="checkbox" name="advantages" id="filter-advantages">
               <label for="filter-advantages">Блок преимуществ</label>
             </li>
-            <li>
+            <li class="property-item">
               <input type="checkbox" checked name="news" id="filter-news">
               <label for="filter-news">Новости</label>
             </li>
-            <li>
+            <li class="property-item">
               <input type="checkbox" name="gallery" id="filter-gallery">
               <label for="filter-gallery">Галерея</label>
             </li>
-            <li>
+            <li class="property-item">
               <input type="checkbox" name="basket" id="filter-basket">
               <label for="filter-basket">Корзина</label>
             </li>
@@ -80,32 +87,32 @@
 
       <h2>Сортировать:</h2>
       <h3>Тип сортировки</h3>
-      <ul>
+      <ul class="sorting-type -list">
         <li>
-          <a href="blank.html">по цене</a>
+          <a class="sorting-item" href="blank.html">по цене</a>
         </li>
         <li>
-          <a href="blank.html">по типу</a>
+          <a class="sorting-item" href="blank.html">по типу</a>
         </li>
         <li>
-          <a href="blank.html">по названию</a>
+          <a class="sorting-item" href="blank.html">по названию</a>
         </li>
       </ul>
 
       <h3>Направление сортировки</h3>
       <ul>
         <li>
-          <a href="blank.html">по убыванию</a>
+          <a class="sorting-decrease" href="blank.html">по убыванию</a>
         </li>
         <li>
-          <a href="blank.html">по возрастанию</a>
+          <a class="sorting-increase" href="blank.html">по возрастанию</a>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="templates">
       <h2>Шаблоны</h2>
-      <ul>
-        <li>
+      <ul class="templates-list">
+        <li class="template-item">
           <a href="blank.html">
             <img src="img/templates/sedona.png" width="358" height="578" alt="Седона">
           </a>
@@ -113,11 +120,11 @@
             <h3>Седона</h3>
           </a>
           <p>Информационный сайт<br> для туристов</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
-        <li>
+        <li class="template-item">
           <a href="blank.html">
             <img src="img/templates/pink.png" width="358" height="578" alt="Пинк">
           </a>
@@ -129,7 +136,7 @@
             9 900 ₽
           </a>
         </li>
-        <li>
+        <li class="template-item">
           <a href="blank.html">
             <img src="img/templates/barbershop.png" width="358" height="578" alt="Барбершоп">
           </a>
@@ -141,7 +148,7 @@
             9 900 ₽
           </a>
         </li>
-        <li>
+        <li class="template-item">
           <a href="blank.html">
             <img src="img/templates/mishka.png" width="358" height="578" alt="Мишка">
           </a>
@@ -153,7 +160,7 @@
             9 900 ₽
           </a>
         </li>
-        <li>
+        <li class="template-item">
           <a href="blank.html">
             <img src="img/templates/a-plus.png" width="358" height="578" alt="A Plus">
           </a>
@@ -165,55 +172,69 @@
             9 900 ₽
           </a>
         </li>
-        <a href="blank.html">
-          <img src="img/templates/kvast.png" width="358" height="578" alt="КВАСТ">
-        </a>
-        <a href="blank.html">
-          <h3>КВАСТ</h3>
-        </a>
-        <p>Промо-сайт производителя<br> крафтового кваса</p>
-        <a href="blank.html">
-          9 900 ₽
-        </a>
+        <li class="template-item">
+          <a href="blank.html">
+            <img src="img/templates/kvast.png" width="358" height="578" alt="КВАСТ">
+          </a>
+          <a href="blank.html">
+            <h3>КВАСТ</h3>
+          </a>
+          <p>Промо-сайт производителя<br> крафтового кваса</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
       </ul>
-      <ul>
-        <li>
+      <ul class="pagination-list">
+        <li class="pagination-item">
           <a>1</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="blank.html">2</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="blank.html">3</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="blank.html">Следующая</a>
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <section>
-      <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
-      <img src="img/map-marker.png" width="231" height="190" alt="">
+  <footer class="main-footer">
+    <section class="map">
+      <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
     </section>
-    <section>
+    <section class="contacts">
       <h2>Контакты</h2>
       <p>NЁRDS DESIGN STUDIO</p>
       <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
-      <a href="blank.html">Напишите нам</a>
+      <a class="button" href="blank.html">Напишите нам</a>
     </section>
-    <section>
+    <section class="footer-social">
       <h2>Давайте дружить!</h2>
-      <ul>
+      <ul class="socials-list">
         <li>
-          <a href="#">Вконтакте</a>
+          <a class="social-item" href="#"><span class="hidden">Вконтакте</span><svg width="27" height="15"
+              viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
+                fill="white" />
+            </svg></a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a class="social-item" href="#"><span class="hidden">Фейсбук</span><svg width="12" height="22"
+              viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
+            </svg></a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a class="social-item" href="#"><span class="hidden">Инстаграм</span><svg width="21" height="21"
+              viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
+                fill="white" />
+            </svg></a>
         </li>
       </ul>
       <p><b>Давайте дружить, это выгодно!</b></p>
