--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="main-header">
     <nav class="main-nav">
       <a class="main-header-logo">
-        <img src="/img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
       <ul class="site-nav">
         <li class="nav-item"><a href="blank.html">Студия</a></li>
@@ -69,20 +69,20 @@
     <section class="products">
       <h2>Продукты</h2>
       <ul class="products-list">
-        <li class="product-item">
+        <li class="product-item product-item-sites">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="button button-item-site" href="blank.html">Заказать</a>
+          <a class="button" href="blank.html">Заказать</a>
         </li>
-        <li class="product-item">
+        <li class="product-item product-item-apps">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-          <a class="button button-item-app" href="blank.html">Заказать</a>
+          <a class="button" href="blank.html">Заказать</a>
         </li>
-        <li class="product-item">
+        <li class="product-item product-item-presentations">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, <br> насколько вы изумительны!</p>
-          <a class="button button-item-presentation" href="blank.html">Заказать</a>
+          <a class="button" href="blank.html">Заказать</a>
         </li>
       </ul>
     </section>
@@ -123,7 +123,7 @@
       <ul class="partners-list">
         <li class="partner-item">
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo/htmlacademy.png" width="199" height="68" alt="html Академия">
+            <img src="img/logo/hmlacademy.svg" width="199" height="68" alt="html Академия">
           </a>
         </li>
         <li class="partner-item">
@@ -158,22 +158,22 @@
       <h2>Давайте дружить!</h2>
       <ul class="socials-list">
         <li>
-          <a class="social-item" href="#">Вконтакте <svg width="27" height="15" viewBox="0 0 27 15" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
+          <a class="social-item" href="#"><span class="hidden">Вконтакте</span><svg width="27" height="15"
+              viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
                 fill="white" />
             </svg></a>
         </li>
         <li>
-          <a class="social-item" href="#">Фейсбук<svg width="12" height="22" viewBox="0 0 12 22" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
+          <a class="social-item" href="#"><span class="hidden">Фейсбук</span><svg width="12" height="22"
+              viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
             </svg></a>
         </li>
         <li>
-          <a class="social-item" href="#">Инстаграм<svg width="21" height="21" viewBox="0 0 21 21" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
+          <a class="social-item" href="#"><span class="hidden">Инстаграм</span><svg width="21" height="21"
+              viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
                 fill="white" />
