правка стилизации главной страницы

--- a/blank.html
+++ b/blank.html
@@ -17,7 +17,7 @@
   <header class="main-header">
     <nav class="main-nav">
       <a class="main-header-logo" href="index.html">
-        <img src="/img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
       <ul class="site-nav">
         <li class="nav-item"><a href="blank.html">Студия</a></li>
@@ -28,6 +28,7 @@
       <a class="cart-link" href="blank.html">Корзина</a>
     </nav>
   </header>
+  <main class="page-main">
 
   </main>
   <footer class="main-footer">
