--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
       <ul class="site-nav">
         <li class="nav-item"><a href="blank.html">Студия</a></li>
         <li class="nav-item"><a href="blank.html">Клиенты</a></li>
-        <li class="nav-item"><a>Магазин</a></li>
+        <li class="nav-item nav-item-active"><a>Магазин</a></li>
         <li class="nav-item"><a href="blank.html">Контакты</a></li>
       </ul>
       <a class="cart-link" href="blank.html">Корзина</a>
@@ -85,9 +85,9 @@
         <button type="submit">Показать</button>
       </form>
 
-      <h2>Сортировать:</h2>
+      <h2 class="sorting-title">Сортировать:</h2>
       <h3>Тип сортировки</h3>
-      <ul class="sorting-type -list">
+      <ul class="sorting-type-list">
         <li>
           <a class="sorting-item" href="blank.html">по цене</a>
         </li>
@@ -117,7 +117,7 @@
             <img src="img/templates/sedona.png" width="358" height="578" alt="Седона">
           </a>
           <a href="blank.html">
-            <h3>Седона</h3>
+            <h3>Sedona</h3>
           </a>
           <p>Информационный сайт<br> для туристов</p>
           <a class="button" href="blank.html">
@@ -132,7 +132,7 @@
             <h3>Pink App</h3>
           </a>
           <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
@@ -144,7 +144,7 @@
             <h3>Barbershop</h3>
           </a>
           <p>Сайт салона красоты.<br> Для мужчин, да.</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
@@ -156,7 +156,7 @@
             <h3>MISHKA</h3>
           </a>
           <p>Интернет-магазин<br> вязаных игрушек</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
@@ -168,7 +168,7 @@
             <h3>A Plus</h3>
           </a>
           <p>Лендинг курсов повышения квалификации</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
@@ -180,13 +180,13 @@
             <h3>КВАСТ</h3>
           </a>
           <p>Промо-сайт производителя<br> крафтового кваса</p>
-          <a href="blank.html">
+          <a class="button" href="blank.html">
             9 900 ₽
           </a>
         </li>
       </ul>
       <ul class="pagination-list">
-        <li class="pagination-item">
+        <li class="pagination-item pagination-item-current">
           <a>1</a>
         </li>
         <li class="pagination-item">
@@ -207,7 +207,7 @@
     </section>
     <section class="contacts">
       <h2>Контакты</h2>
-      <p>NЁRDS DESIGN STUDIO</p>
+      <p class="contact-title">NЁRDS DESIGN STUDIO</p>
       <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
       <a class="button" href="blank.html">Напишите нам</a>
     </section>
